// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MethodInvocation > writes method invocation with 1 argument 1`] = `"2.my_method(1)"`;

exports[`MethodInvocation > writes method invocation with 1 argument and a block 1`] = `
"2.my_method(1) do
  Time.now
end"
`;

exports[`MethodInvocation > writes method invocation with 1 keyword argument 1`] = `"2.my_method(keyword: 1)"`;

exports[`MethodInvocation > writes method invocation with 2 arguments 1`] = `
"2.my_method(
  1,
  3
)"
`;

exports[`MethodInvocation > writes method invocation with 2 arguments and a block 1`] = `
"2.my_method(
  1,
  3
) do
  Time.now
end"
`;

exports[`MethodInvocation > writes method invocation with 2 keyword arguments 1`] = `
"2.my_method(
  keyword1: 1,
  keyword2: 2
)"
`;

exports[`MethodInvocation > writes method invocation with a block with one block arg 1`] = `
"2.my_method() do |duration|
  Time.now + duration
end"
`;

exports[`MethodInvocation > writes method invocation with a block with three block args 1`] = `
"2.my_method() do |duration1, duration2, duration3|
  Time.now + duration1 + duration2 + duration3
end"
`;

exports[`MethodInvocation > writes method invocation with a block with two block args 1`] = `
"2.my_method() do |duration1, duration2|
  Time.now + duration1 + duration2
end"
`;

exports[`MethodInvocation > writes method invocation with a mix of positional and keyword arguments 1`] = `
"2.my_method(
  1,
  3,
  keyword1: 1,
  keyword2: 2
)"
`;

exports[`MethodInvocation > writes method invocation with implicit Kernel receiver 1`] = `"my_method()"`;

exports[`MethodInvocation > writes method invocation with no arguments 1`] = `"2.my_method()"`;

exports[`MethodInvocation > writes method invocation with no arguments but a block 1`] = `
"2.my_method() do
  Time.now
end"
`;
